--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -106,26 +106,36 @@ font-weight:boldd;
  }
 
 aside {
-    background-color: #FFF;
+	display: block;
+    background-color: #f0ebdc;
     box-shadow: 0px 1px 3px #CCC;
-    border: 1px solid #aaa;
-    margin-bottom: 70px;
+    border: 0px solid #aaa;
+    margin-bottom: 20px;
     margin-top: 0px;
-    height:110px;
-    width:220px
+	font-size:13px;
+    height:230px;
+    width:215px 
+	
+}
+
+#aside-padding{
+	padding: 5px;
 }
  
 #aside-header {
+font-family: serif;
 color:#ffffff;
-font-size:18px;
+font-size:17px;
+font-weight: none;
+font-style: none;
 
     height: 30px;
-width:220px;
+width:215px;
     display: table-cell;
         /* or to vert-centre: line-height: 30px; */
-    background-color: #bd1819;
+    background-color: #dc4243;
     
-    padding:5px 0px 0px 0px;
+    padding:0px 0px 0px 0px;
     vertical-align: middle;
 }
 
